--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -8,8 +8,15 @@
           {{#unless this.devoured}}
           <div>
             <form action="/burgers/{{this.id}}?_method=PUT" method="POST">
-                <button type="submit" class='burgerNotDevoured'> {{this.burgerName}}</button>
-              </form>
+                <div class = "row">
+                  <div class = "col s6">
+                    <p>{{this.burgerName}}</p>
+                  </div>
+                  <div class = "col s6"> 
+                    <button type="submit" class='burgerNotDevoured'>Devour Me!</button>
+                  </div>
+                </div>
+            </form>
           </div>
           {{/unless}}
         {{/each}}
