--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -7,7 +7,7 @@
         {{#each burgers}}
           {{#unless this.devoured}}
           <div>
-            <form action="/burgers/{{this.id}}?_method=PUT" method="POST">
+            <form action="/burger/{{this.id}}?_method=PUT" method="POST">
                 <div class = "row">
                   <div class = "col s6">
                     <p>{{this.burgerName}}</p>
@@ -41,14 +41,11 @@
 <!-- add burger field-->
 
 
-
-
-
 <h2>Add a Burger to the Menu!</h2>
 
 <div class = "row">
   <div class = "col s12">
-    <form action = "/burgers" method = "POST">
+    <form action = "/burger" method = "POST">
 	    <textarea type="text" id = "name" name="burgerName" placeholder = "Yummy burger"></textarea>
 	    <button type="submit" class = "addBurgerBtn">Add my Burger!</button>
     </form>
