--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,95 +1,62 @@
-<h1>Eat-da-Burger</h1>
-<!-- toptwo columns-->
-<main>
-  <div class = "container">
-    <div class = "row">
-      <div class = "col s6">
-        {{#each burgers}}
-          {{#unless this.devoured}}
-          <div>
-            <form action="/burger/{{this.id}}?_method=PUT" method="POST">
-                <div class = "row">
-                  <div class = "col s6">
-                    <p>{{this.burgerName}}</p>
-                  </div>
-                  <div class = "col s6"> 
-                    <button type="submit" class='burgerNotDevoured'>Devour Me!</button>
-                  </div>
-                </div>
-            </form>
-          </div>
-          {{/unless}}
-        {{/each}}
-      </div>
+<div class="container">	
+	<div class="jumbotron"> 
+		 
+		<h1> Eat-Da-Burger! </h1>
+	</div>
 
-      <div class = "col s6">
-        {{#each burgers}}
-          {{#if this.devoured}}
-          <div class = "burgerDevoured">
-            <div>
-              {{this.burgerName}}
-            </div>
-          </div>
-          {{/if}}
-        {{/each}}
-      </div>
-
-    </div>
-  </div>
-</main>
-
-<!-- add burger field-->
+	{{!-- burger list before being eaten --}}
+	<div class="row">
+		<div class="col-md-4 col-md-offset-1">
+			<div class="panel-panel default">
+				<ul class="list-group">
+				{{#each burgers}}
+					{{#unless this.devoured}}
+					<li class="list-group-item">
+						<div class="input-group">
+							<p class="lead"> {{this.burgerName}} </p>
+							<span class="input-group-btn">
+								<form action="burgers/update/{{this.id}}?_method=PUT" method="POST">
+									<input type="hidden" name="devoured" value="true">
+									<button class="btn btn-default btn-lg" type="submit"> EAT IT! </button>
+								</form>
+							</span>
+						</div>
+					</li>
+					{{/unless}}
+				{{/each}}
+			</ul>
+		</div>
+	</div>
 
 
-<h2>Add a Burger to the Menu!</h2>
+		{{!-- burger list after being eaten --}}
+	<div class="row">
+		<div class="col-md-4 col-md-offset-2">
+			<div class="panel panel-default">
+				<ul class="list-group">
+				{{#each burgers}}
+					{{#if this.devoured}}
+					<li class="list-group-item">
+						<p class="lead">{{this.burgerName}} </p>
+					</li>
+					{{/if}}
+				{{/each}}
+				</ul>
+			</div>
+		</div>
+	</div>
 
-<div class = "row">
-  <div class = "col s12">
-    <form action = "/burger" method = "POST">
-	    <textarea type="text" id = "name" name="burgerName" placeholder = "Yummy burger"></textarea>
-	    <button type="submit" class = "addBurgerBtn">Add my Burger!</button>
-    </form>
-  </div>
+	<div class="col-md-10 col-md-offset-1">
+		<p class="lead"> Enter the name of the burger you want to eat & click the submit button. </p>
+
+		{{!-- section to add burgers --}}
+		<form class="create-update-form" action="burgers/create" method="POST">
+
+			<div class="form-group">
+				<textarea class="form-control input-lg" type="text" name="b_name" rows="3"> </textarea>
+			</div>
+
+			<button class="btn btn-default btn-lg" type="submit">Add Burger!</button>
+		</form>
+	</div>
 </div>
-
-<!--
-<script type="text/javascript">
-  $(".devour").on("click", function(event) {
-    var id = $(this).data("burger");
-
-    // Send the DELETE request.
-    $.ajax("/burgers/" + id, {
-      type: "DEVOUR"
-    }).then(
-      function() {
-        console.log("deleted id ", id);
-        // Reload the page to get the updated list
-        location.reload();
-      }
-    );
-  });
-
-  $("#addburger").on("submit", function(event) {
-    // Make sure to preventDefault on a submit event.
-    event.preventDefault();
-
-    var newBurger = {
-      burger: $("#addburger [name=burger]").val().trim()
-    };
-
-    // Send the POST request.
-    $.ajax("/burgers/", {
-      type: "POST",
-      data: newBurger
-    }).then(
-      function() {
-        console.log("added new burger");
-        // Reload the page to get the updated list
-        location.reload();
-      }
-    );
-  });
-
-  
-</script>
--->
